# outline-ui

./: .gitignore  CMakeLists.txt  Readme.md
cmake/: DownloadFile.cmake
include/outline-ui/: AtmButton.hpp  AtmTypes.hpp  AtmWidgetArea.hpp  AtmWidgetConcept.hpp  OUI.hpp  OUI_types.hpp  OUI_widget_area.hpp  OUI_widget_concept.hpp
include/outline-ui/widget/: button.hpp
src/: CMakeLists.txt  main.cpp
